# three_point_fitting

./: LINKING_TO_LIB  Makefile.in  README.md  configure  configure.ac  fitting-config.in
autom4te.cache/: output.3  requests  traces.0  traces.2  traces.3
doxy/html/: annotated.html  classes.html  dir_000015_000012.html  dir_000016_000012.html  dir_000017_000012.html  dir_000020_000021.html  dir_000022_000025.html  dir_06d786c7c8f7c5040b52da7ba8b373b4.html  dir_183b11d03f9126c2989c8493536ce62c.html  dir_2e12d52d868c3e6b38d1d0487f2ed7fe.html  dir_420340d4058f1c16dde89a2e23f677a8.html  dir_481280251c3a8dab0d343205820f6fda.html  dir_481280251c3a8dab0d343205820f6fda_dep.map  dir_481280251c3a8dab0d343205820f6fda_dep.md5  dir_54cf92300b4da974afd4f8e4d80e2627.html  dir_56e42f2b1fbba467718319b06026eaa2.html  dir_60fbcf5fbdf49136857738a43e7ca953.html  dir_60fbcf5fbdf49136857738a43e7ca953_dep.map  dir_6184f96741a244b767349a3c7b727862.html  dir_82dbfb560c5d07f7f4f150dda821d8b6.html  dir_8b1c8450f4311b945267f35fdea8d9ff.html  dir_8f4e8599ffe58232a1901769b7a89ae2.html  dir_91cbde81fc036710c5ef1006109fb8f3.html  dir_91cbde81fc036710c5ef1006109fb8f3_dep.map  dir_91cbde81fc036710c5ef1006109fb8f3_dep.md5  dir_9874bffa239285a39f6d581c021a0b84.html  dir_9874bffa239285a39f6d581c021a0b84_dep.map  dir_99bd222b10c618d7b9cf14fe7e0eb30a.html  dir_a3df3d0f89e826a0635e1dddbced1ce7.html  dir_a52d9d48527b251ebb576df3a742a876.html  dir_a52d9d48527b251ebb576df3a742a876_dep.map  dir_a52d9d48527b251ebb576df3a742a876_dep.md5  dir_aeab144d4447bf78a47347d7656d3806.html  dir_b115b537d5e7b928b74ebe696cb710c6.html  dir_b5de22da5a8be51dc1d84bf1b2e98261.html  dir_be3975248ce8d9aaa779ee8718268054.html  dir_d4276920fedadc56797a3897db076627.html  dir_d4276920fedadc56797a3897db076627_dep.map  dir_da6dd282f32260c5e13209f9f1718a8f.html  dir_de680507ca29248d1e0432928edb7f87.html  (+247 more)
doxy/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  (+95 more)
doxy/latex/: annotated.tex  dir_06d786c7c8f7c5040b52da7ba8b373b4.tex  dir_183b11d03f9126c2989c8493536ce62c.tex  dir_2e12d52d868c3e6b38d1d0487f2ed7fe.tex  dir_420340d4058f1c16dde89a2e23f677a8.tex  dir_481280251c3a8dab0d343205820f6fda.tex  dir_54cf92300b4da974afd4f8e4d80e2627.tex  dir_56e42f2b1fbba467718319b06026eaa2.tex  dir_60fbcf5fbdf49136857738a43e7ca953.tex  dir_60fbcf5fbdf49136857738a43e7ca953_dep.md5  dir_6184f96741a244b767349a3c7b727862.tex  dir_82dbfb560c5d07f7f4f150dda821d8b6.tex  dir_8b1c8450f4311b945267f35fdea8d9ff.tex  dir_8f4e8599ffe58232a1901769b7a89ae2.tex  dir_91cbde81fc036710c5ef1006109fb8f3.tex  dir_9874bffa239285a39f6d581c021a0b84.tex  dir_9874bffa239285a39f6d581c021a0b84_dep.md5  dir_99bd222b10c618d7b9cf14fe7e0eb30a.tex  dir_a3df3d0f89e826a0635e1dddbced1ce7.tex  dir_a52d9d48527b251ebb576df3a742a876.tex  dir_aeab144d4447bf78a47347d7656d3806.tex  dir_b115b537d5e7b928b74ebe696cb710c6.tex  dir_b5de22da5a8be51dc1d84bf1b2e98261.tex  dir_be3975248ce8d9aaa779ee8718268054.tex  dir_d4276920fedadc56797a3897db076627.tex  dir_d4276920fedadc56797a3897db076627_dep.md5  dir_da6dd282f32260c5e13209f9f1718a8f.tex  dir_de680507ca29248d1e0432928edb7f87.tex  dir_f26d5ea96335cf31d0730ed51db864f8.tex  dir_fa11be894f8062485271431e252bf1b2.tex  files.tex  hierarchy.tex  namespaces.tex  refman.tex
gnuplot/: plot_f_vs_qsq.pl  plot_param_syst.pl  plot_three_pt_fit.pl  plot_timeslice_three_pt_fit.pl
lib/: pair_int_abscissa.h  three_point_timeslice_corr_functions_factory.h  three_pt_fit_quality.h  three_pt_fit_quality_factory.cc  z_timeslice_functions.h
lib/old/: old.cc  old.h  old_1.cc
notes/: three_pt_fn_analysis.aux  three_pt_fn_analysis.tex
old/: edb_reader_old.cc  edb_reader_old.h  ensem.cc  ensemble_fit_three_pt_fns.cc  old_edb.cc  radmat.cc  radmat.h  three_point_timeslice_fitting.cc  three_point_timeslice_fitting.h  three_pt_fit_quality.cc
old/stash/: three_point_timeslice_corr_functions.cc  three_point_timeslice_corr_functions.h  three_point_timeslice_corr_functions_factory.cc  three_point_timeslice_fitting.h  three_pt_fit_quality.cc  three_pt_fit_quality.h  three_pt_fit_quality_factory.cc  three_pt_fit_quality_factory.h  z_timeslice_fitting.h
plotting_scripts/: plot_formfac_qsq.py  plot_param_syst.pl  plot_param_syst.py  plot_three_pt_fit.pl  plot_three_pt_fits.py
src/: Makefile.am  Makefile.in  edb_reader.cc  edb_reader.h  ensemble_fit_three_pt_fns.cc  ensemble_fit_three_pt_fns_devel.cc  fit_const.cc  fit_zt.cc  key_struct.cc  pair_int_abscissa.h  pair_int_abscissa_data_builder.h  test_three_pt_fit.cc  three_point_timeslice_corr_functions.cc  three_point_timeslice_corr_functions.h  three_point_timeslice_fitting.cc  three_point_timeslice_fitting.h  three_pt_fit_quality.cc  three_pt_fit_quality.h  three_pt_fit_quality_factory.cc  z_timeslice_fitting.h
src/exe/: ensemble_fit_three_pt_fns.cc  fit_formfac_qsq.cc  fit_zt.cc  make_elab.cc
src/io/: edb_reader.cc  edb_reader.h  key_struct.cc  key_struct.h  read_formfac_qsq_data.cc  read_formfac_qsq_data.h  write_data.cc  write_data.h  xml_reader.cc  xml_reader.h
src/lib/: double_abscissa_data_builder.h  edb_reader.h  formfac_qsq_fitting.cc  formfac_qsq_fitting.h  formfac_qsq_functions.cc  formfac_qsq_functions.h  formfac_qsq_functions_factory.cc  formfac_qsq_functions_factory.h  key_struct.cc  key_struct.h  pair_int_abscissa_data_builder.h  rotations.cc  rotations.h  three_point_timeslice_corr_functions.cc  three_point_timeslice_corr_functions.h  three_point_timeslice_fitting.cc  three_point_timeslice_fitting.h  three_pt_fit_quality.cc  three_pt_fit_quality.h  three_pt_fit_quality_factory.cc  z_timeslice_functions.h  z_timeslice_functions_factory.cc
src/test/: test_three_pt_fit.cc  z_timeslice_fitting.cc  z_timeslice_functions.cc  z_timeslice_functions_factory.h
src/utility/: make_elab.h
(+3044 files in other folders)
